--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>v3</title>
+    <title>v-time-picker v-model="value" format="24hr"></v-time-picker></title>
   </head>
   <body>
     <noscript>
