--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,20 @@
       justify-content: space-between;
       align-items: flex-start;
     }
+    footer {
+      width: 80vw;
+      margin: 1.5rem auto;
+      display: flex;
+      align-items: flex-end;
+    }
+    footer a {
+      margin-left: 10px;
+      text-decoration: none;
+    }
+    .joeallen {
+      width: 20px;
+      margin-top: 5px;
+    }
 
     .imagePop--container:first-child .imagePop {
       padding: 0 1rem 0 .5rem;
@@ -99,6 +113,10 @@
       }
       .container {
         width: 90vw;
+      }
+      footer {
+        width: 90vw;
+        margin: 0 auto;
       }
     }
   </style>
@@ -161,6 +179,9 @@
       </div>
     </article>
   </div>
+  <footer>
+    created by: <a href="https://joeallen.dev" target="_blank" rel="noopener noreferrer">joeallen<img class="joeallen" src="./img/joeallen-dev.png" alt="logo">dev</a>
+  </footer>
   <script>
     var lf_components = {
       imagePop: true,
